@@ -27,6 +27,8 @@
 
 === Enhancements
 
+Improve and use periodic boundary condition for seasonal component modeling ({pull}84[#84])
+
 === Bug Fixes
 
 === Regressions
